<resources>
    <string name="app_name">我的账单</string>
    <string name="keep_bill">记账</string>
    <string name="assessment">汇总</string>
    <string name="check_bill">查账</string>
    <string name="date">日期</string>
    <string name="departure">出发地</string>
    <string name="destination">目的地</string>
    <string name="distance">距离</string>
    <string name="price">单价</string>
    <string name="good_type">货物名称</string>
    <string name="weight">吨位</string>
    <string name="total_price">总价</string>
    <string name="notes">备注</string>
    <string name="submit">保存</string>
    <string name="date_picker_title">日期选择</string>
    <string name="select_month">选择月份</string>
    <string name="select_year">选择年份</string>
    <string name="select_date">选择日期</string>
    <string name="price_and_weight">价格*数量</string>
    <string name="message_fee">信息费</string>
    <string name="other_info">其他信息</string>
    <string name="contact">联系人</string>
    <string name="oil_card">油卡</string>
    <string name="account">转账</string>
    <string name="fay">付清</string>
    <string name="homepage">主页</string>
    <string name="total_price_yet">已付</string>
    <string name="modify_total_price">修改信息</string>
    <string name="delete_bill">确认删除</string>
    <string name="yes">确认</string>
    <string name="no">取消</string>
    <string name="type_select">种类选择</string>
    <string name="maintenance">维修</string>
    <string name="maintenance_record">维修记录</string>
    <string name="bill_record">运单记录</string>
    <string name="maintenance_name">维修名称</string>
    <string name="maintenance_total_price">维修总费用</string>
    <string name="detail_info">详细信息</string>
    <string name="maintenance_detail_info">维修详情</string>
    <string name="new_bill">新增一项</string>
    <string name="bill">账单</string>
    <string name="open">打开主页</string>
    <string name="import_data">导入数据</string>
    <string name="output_data">导出数据</string>
</resources>
