<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background3"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_create_date"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            style="@style/Button1"
            android:textColor="@color/gray"
            android:background="@null"/>

        <ImageButton
            android:id="@+id/image_button_clear"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_clear"
            android:background="@null"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border6"
        android:padding="4dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/good_type"
                    style="@style/TextView1"/>

                <EditText
                    android:id="@+id/edit_text_good_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/EditText1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/departure"
                    style="@style/TextView1"/>

                <EditText
                    android:id="@+id/edit_text_departure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/EditText1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/destination"
                    style="@style/TextView1"/>

                <EditText
                    android:id="@+id/edit_text_destination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/EditText1"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextView1"
                        android:text="@string/price"/>

                    <EditText
                        android:id="@+id/edit_text_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        style="@style/EditText1"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextView1"
                        android:text="@string/weight"/>

                    <EditText
                        android:id="@+id/edit_text_weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        style="@style/EditText1"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:layout_height="wrap_content"
                            style="@style/TextView1"
                            android:text="@string/total_price"/>

                        <CheckBox
                            android:id="@+id/checkbox_total_price"
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border"/>
                    </LinearLayout>


                    <EditText
                        android:id="@+id/edit_text_total_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        style="@style/EditText1"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:layout_height="wrap_content"
                            style="@style/TextView1"
                            android:text="@string/oil_card"/>

                        <CheckBox
                            android:id="@+id/checkbox_oil_card"
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border"/>

                    </LinearLayout>

                    <EditText
                        android:id="@+id/edit_text_oil_card"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        style="@style/EditText1"/>
                </LinearLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/image_button_notes"
                    android:layout_gravity="right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:src="@drawable/ic_edit"/>

                <EditText
                    android:id="@+id/edit_text_notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/EditText1"
                    android:hint="@string/notes"
                    android:minLines="3"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>