<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ScrollView
        android:id="@+id/swipe_refresh_layout_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:orientation="vertical"
            android:paddingBottom="120dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/maintenance_name"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edit_text_maintenance_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_create_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/select_date"
                    android:textColor="@color/background3"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="16dp"
                    android:text="@string/maintenance_total_price"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edit_text_maintenance_total_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="64dp"
                    android:layout_marginRight="64dp"
                    android:layout_marginBottom="16dp"
                    android:padding="2dp"
                    android:background="@drawable/border5"
                    android:gravity="center_horizontal"
                    android:hint="0"
                    android:inputType="number"
                    android:maxLength="6"
                    android:maxLines="1"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/maintenance_detail_info"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_text_maintenance_detail_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@drawable/border5"
                android:minLines="3"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>