<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/border">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/total_price"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edit_text_modify_total_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border5"
                    android:layout_marginLeft="16dp"
                    android:inputType="number"
                    android:gravity="center_horizontal"
                    android:maxLength="6"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:hint="0"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/total_price_yet"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edit_text_modify_total_price_yet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border5"
                    android:inputType="number"
                    android:gravity="center_horizontal"
                    android:layout_marginLeft="16dp"
                    android:maxLength="6"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:hint="0"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>


        <CheckBox
            android:id="@+id/checkbox_modify_total_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fay" />
    </LinearLayout>
</LinearLayout>